seal.output
Nonterminals useless in grammar

   actual
   expr_list


状态 20 conflicts: 1 shift/reduce


语法

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl
    3          | decl_list decl

    4 decl: variableDecl
    5     | callDecl

    6 variableDecl: VAR variable ';'

    7 variableDecl_list: %empty
    8                  | variableDecl_list variableDecl

    9 variable: OBJECTID TYPEID

   10 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock

   11 variable_list: %empty
   12              | variable_list variable

   13 stmtBlock: '{' '}'
   14          | '{' variableDecl_list stmt_list '}'

   15 stmt_list: %empty
   16          | stmt_list stmt

   17 stmt: ';'
   18     | expr ';'
   19     | ifStmt
   20     | whileStmt
   21     | forStmt
   22     | breakStmt
   23     | continueStmt
   24     | returnStmt
   25     | stmtBlock

   26 ifStmt: IF expr stmtBlock ELSE stmtBlock
   27       | IF expr stmtBlock

   28 whileStmt: WHILE expr stmtBlock

   29 forStmt: FOR expr ';' expr ';' expr stmtBlock
   30        | FOR expr ';' expr ';' stmtBlock
   31        | FOR expr ';' ';' expr stmtBlock
   32        | FOR expr ';' ';' stmtBlock
   33        | FOR ';' expr ';' expr stmtBlock
   34        | FOR ';' expr ';' stmtBlock
   35        | FOR ';' ';' expr stmtBlock
   36        | FOR ';' ';' stmtBlock

   37 returnStmt: RETURN expr ';'
   38           | RETURN ';'

   39 continueStmt: CONTINUE ';'

   40 breakStmt: BREAK ';'

   41 expr: OBJECTID '=' expr
   42     | CONST_INT
   43     | CONST_BOOL
   44     | CONST_FLOAT
   45     | CONST_STRING
   46     | call
   47     | '(' expr ')'
   48     | OBJECTID
   49     | expr '+' expr
   50     | expr '-' expr
   51     | expr '*' expr
   52     | expr '/' expr
   53     | expr '%' expr
   54     | '-' expr
   55     | expr '<' expr
   56     | expr LE expr
   57     | expr EQUAL expr
   58     | expr NE expr
   59     | expr GE expr
   60     | expr '>' expr
   61     | expr AND expr
   62     | expr OR expr
   63     | expr '^' expr
   64     | '!' expr
   65     | '~' expr
   66     | expr '&' expr
   67     | expr '|' expr

   68 call: OBJECTID '(' actual_list ')'

   69 actual_list: %empty
   70            | expr
   71            | actual_list ',' expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 64
'%' (37) 53
'&' (38) 66
'(' (40) 10 47 68
')' (41) 10 47 68
'*' (42) 51
'+' (43) 49
',' (44) 71
'-' (45) 50 54
'/' (47) 52
';' (59) 6 17 18 29 30 31 32 33 34 35 36 37 38 39 40
'<' (60) 55
'=' (61) 41
'>' (62) 60
'^' (94) 63
'{' (123) 13 14
'|' (124) 67
'}' (125) 13 14
'~' (126) 65
error (256)
IF (258) 26 27
ELSE (260) 26
WHILE (261) 28
FOR (262) 29 30 31 32 33 34 35 36
BREAK (263) 40
CONTINUE (264) 39
FUNC (265) 10
RETURN (266) 37 38
CONST_BOOL (267) 43
CONST_INT (268) 42
CONST_STRING (269) 45
CONST_FLOAT (270) 44
VAR (271) 6
AND (274) 61
OR (275) 62
EQUAL (276) 57
NE (277) 58
GE (278) 59
LE (279) 56
OBJECTID (284) 9 10 41 48 68
TYPEID (285) 9 10
UMINUS (287)


Nonterminals, with rules where they appear

$accept (44)
    左： 0
program (45)
    左： 1, 右： 0
decl_list (46)
    左： 2 3, 右： 1 3
decl (47)
    左： 4 5, 右： 2 3
variableDecl (48)
    左： 6, 右： 4 8
variableDecl_list (49)
    左： 7 8, 右： 8 14
variable (50)
    左： 9, 右： 6 12
callDecl (51)
    左： 10, 右： 5
variable_list (52)
    左： 11 12, 右： 10 12
stmtBlock (53)
    左： 13 14, 右： 10 25 26 27 28 29 30 31 32 33 34 35 36
stmt_list (54)
    左： 15 16, 右： 14 16
stmt (55)
    左： 17 18 19 20 21 22 23 24 25, 右： 16
ifStmt (56)
    左： 26 27, 右： 19
whileStmt (57)
    左： 28, 右： 20
forStmt (58)
    左： 29 30 31 32 33 34 35 36, 右： 21
returnStmt (59)
    左： 37 38, 右： 24
continueStmt (60)
    左： 39, 右： 23
breakStmt (61)
    左： 40, 右： 22
expr (62)
    左： 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64 65 66 67, 右： 18 26 27 28 29 30 31 32 33 34 35
    37 41 47 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 70 71
call (63)
    左： 68, 右： 46
actual_list (64)
    左： 69 70 71, 右： 68 71


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    program       转到状态 3
    decl_list     转到状态 4
    decl          转到状态 5
    variableDecl  转到状态 6
    callDecl      转到状态 7


State 1

   10 callDecl: FUNC . OBJECTID '(' variable_list ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 8


State 2

    6 variableDecl: VAR . variable ';'

    OBJECTID  shift, and go to state 9

    variable  转到状态 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: decl_list .
    3 decl_list: decl_list . decl

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl          转到状态 12
    variableDecl  转到状态 6
    callDecl      转到状态 7


State 5

    2 decl_list: decl .

    $default  reduce using rule 2 (decl_list)


State 6

    4 decl: variableDecl .

    $default  reduce using rule 4 (decl)


State 7

    5 decl: callDecl .

    $default  reduce using rule 5 (decl)


State 8

   10 callDecl: FUNC OBJECTID . '(' variable_list ')' TYPEID stmtBlock

    '('  shift, and go to state 13


State 9

    9 variable: OBJECTID . TYPEID

    TYPEID  shift, and go to state 14


State 10

    6 variableDecl: VAR variable . ';'

    ';'  shift, and go to state 15


State 11

    0 $accept: program $end .

    $default  接受


State 12

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


State 13

   10 callDecl: FUNC OBJECTID '(' . variable_list ')' TYPEID stmtBlock

    $default  reduce using rule 11 (variable_list)

    variable_list  转到状态 16


State 14

    9 variable: OBJECTID TYPEID .

    $default  reduce using rule 9 (variable)


State 15

    6 variableDecl: VAR variable ';' .

    $default  reduce using rule 6 (variableDecl)


State 16

   10 callDecl: FUNC OBJECTID '(' variable_list . ')' TYPEID stmtBlock
   12 variable_list: variable_list . variable

    OBJECTID  shift, and go to state 9
    ')'       shift, and go to state 17

    variable  转到状态 18


State 17

   10 callDecl: FUNC OBJECTID '(' variable_list ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 19


State 18

   12 variable_list: variable_list variable .

    $default  reduce using rule 12 (variable_list)


State 19

   10 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID . stmtBlock

    '{'  shift, and go to state 20

    stmtBlock  转到状态 21


State 20

   13 stmtBlock: '{' . '}'
   14          | '{' . variableDecl_list stmt_list '}'

    '}'  shift, and go to state 22

    '}'       [reduce using rule 7 (variableDecl_list)]
    $default  reduce using rule 7 (variableDecl_list)

    variableDecl_list  转到状态 23


State 21

   10 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock .

    $default  reduce using rule 10 (callDecl)


State 22

   13 stmtBlock: '{' '}' .

    $default  reduce using rule 13 (stmtBlock)


State 23

    8 variableDecl_list: variableDecl_list . variableDecl
   14 stmtBlock: '{' variableDecl_list . stmt_list '}'

    VAR  shift, and go to state 2

    $default  reduce using rule 15 (stmt_list)

    variableDecl  转到状态 24
    stmt_list     转到状态 25


State 24

    8 variableDecl_list: variableDecl_list variableDecl .

    $default  reduce using rule 8 (variableDecl_list)


State 25

   14 stmtBlock: '{' variableDecl_list stmt_list . '}'
   16 stmt_list: stmt_list . stmt

    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    BREAK         shift, and go to state 29
    CONTINUE      shift, and go to state 30
    RETURN        shift, and go to state 31
    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 40
    '('           shift, and go to state 41
    '{'           shift, and go to state 20
    '}'           shift, and go to state 42

    stmtBlock     转到状态 43
    stmt          转到状态 44
    ifStmt        转到状态 45
    whileStmt     转到状态 46
    forStmt       转到状态 47
    returnStmt    转到状态 48
    continueStmt  转到状态 49
    breakStmt     转到状态 50
    expr          转到状态 51
    call          转到状态 52


State 26

   26 ifStmt: IF . expr stmtBlock ELSE stmtBlock
   27       | IF . expr stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr  转到状态 53
    call  转到状态 52


State 27

   28 whileStmt: WHILE . expr stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr  转到状态 54
    call  转到状态 52


State 28

   29 forStmt: FOR . expr ';' expr ';' expr stmtBlock
   30        | FOR . expr ';' expr ';' stmtBlock
   31        | FOR . expr ';' ';' expr stmtBlock
   32        | FOR . expr ';' ';' stmtBlock
   33        | FOR . ';' expr ';' expr stmtBlock
   34        | FOR . ';' expr ';' stmtBlock
   35        | FOR . ';' ';' expr stmtBlock
   36        | FOR . ';' ';' stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 55
    '('           shift, and go to state 41

    expr  转到状态 56
    call  转到状态 52


State 29

   40 breakStmt: BREAK . ';'

    ';'  shift, and go to state 57


State 30

   39 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 58


State 31

   37 returnStmt: RETURN . expr ';'
   38           | RETURN . ';'

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 59
    '('           shift, and go to state 41

    expr  转到状态 60
    call  转到状态 52


State 32

   43 expr: CONST_BOOL .

    $default  reduce using rule 43 (expr)


State 33

   42 expr: CONST_INT .

    $default  reduce using rule 42 (expr)


State 34

   45 expr: CONST_STRING .

    $default  reduce using rule 45 (expr)


State 35

   44 expr: CONST_FLOAT .

    $default  reduce using rule 44 (expr)


State 36

   41 expr: OBJECTID . '=' expr
   48     | OBJECTID .
   68 call: OBJECTID . '(' actual_list ')'

    '='  shift, and go to state 61
    '('  shift, and go to state 62

    $default  reduce using rule 48 (expr)


State 37

   54 expr: '-' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr  转到状态 63
    call  转到状态 52


State 38

   64 expr: '!' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr  转到状态 64
    call  转到状态 52


State 39

   65 expr: '~' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr  转到状态 65
    call  转到状态 52


State 40

   17 stmt: ';' .

    $default  reduce using rule 17 (stmt)


State 41

   47 expr: '(' . expr ')'

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr  转到状态 66
    call  转到状态 52


State 42

   14 stmtBlock: '{' variableDecl_list stmt_list '}' .

    $default  reduce using rule 14 (stmtBlock)


State 43

   25 stmt: stmtBlock .

    $default  reduce using rule 25 (stmt)


State 44

   16 stmt_list: stmt_list stmt .

    $default  reduce using rule 16 (stmt_list)


State 45

   19 stmt: ifStmt .

    $default  reduce using rule 19 (stmt)


State 46

   20 stmt: whileStmt .

    $default  reduce using rule 20 (stmt)


State 47

   21 stmt: forStmt .

    $default  reduce using rule 21 (stmt)


State 48

   24 stmt: returnStmt .

    $default  reduce using rule 24 (stmt)


State 49

   23 stmt: continueStmt .

    $default  reduce using rule 23 (stmt)


State 50

   22 stmt: breakStmt .

    $default  reduce using rule 22 (stmt)


State 51

   18 stmt: expr . ';'
   49 expr: expr . '+' expr
   50     | expr . '-' expr
   51     | expr . '*' expr
   52     | expr . '/' expr
   53     | expr . '%' expr
   55     | expr . '<' expr
   56     | expr . LE expr
   57     | expr . EQUAL expr
   58     | expr . NE expr
   59     | expr . GE expr
   60     | expr . '>' expr
   61     | expr . AND expr
   62     | expr . OR expr
   63     | expr . '^' expr
   66     | expr . '&' expr
   67     | expr . '|' expr

    AND    shift, and go to state 67
    OR     shift, and go to state 68
    EQUAL  shift, and go to state 69
    NE     shift, and go to state 70
    GE     shift, and go to state 71
    LE     shift, and go to state 72
    '<'    shift, and go to state 73
    '>'    shift, and go to state 74
    '+'    shift, and go to state 75
    '-'    shift, and go to state 76
    '*'    shift, and go to state 77
    '/'    shift, and go to state 78
    '%'    shift, and go to state 79
    '&'    shift, and go to state 80
    '|'    shift, and go to state 81
    '^'    shift, and go to state 82
    ';'    shift, and go to state 83


State 52

   46 expr: call .

    $default  reduce using rule 46 (expr)


State 53

   26 ifStmt: IF expr . stmtBlock ELSE stmtBlock
   27       | IF expr . stmtBlock
   49 expr: expr . '+' expr
   50     | expr . '-' expr
   51     | expr . '*' expr
   52     | expr . '/' expr
   53     | expr . '%' expr
   55     | expr . '<' expr
   56     | expr . LE expr
   57     | expr . EQUAL expr
   58     | expr . NE expr
   59     | expr . GE expr
   60     | expr . '>' expr
   61     | expr . AND expr
   62     | expr . OR expr
   63     | expr . '^' expr
   66     | expr . '&' expr
   67     | expr . '|' expr

    AND    shift, and go to state 67
    OR     shift, and go to state 68
    EQUAL  shift, and go to state 69
    NE     shift, and go to state 70
    GE     shift, and go to state 71
    LE     shift, and go to state 72
    '<'    shift, and go to state 73
    '>'    shift, and go to state 74
    '+'    shift, and go to state 75
    '-'    shift, and go to state 76
    '*'    shift, and go to state 77
    '/'    shift, and go to state 78
    '%'    shift, and go to state 79
    '&'    shift, and go to state 80
    '|'    shift, and go to state 81
    '^'    shift, and go to state 82
    '{'    shift, and go to state 20

    stmtBlock  转到状态 84


State 54

   28 whileStmt: WHILE expr . stmtBlock
   49 expr: expr . '+' expr
   50     | expr . '-' expr
   51     | expr . '*' expr
   52     | expr . '/' expr
   53     | expr . '%' expr
   55     | expr . '<' expr
   56     | expr . LE expr
   57     | expr . EQUAL expr
   58     | expr . NE expr
   59     | expr . GE expr
   60     | expr . '>' expr
   61     | expr . AND expr
   62     | expr . OR expr
   63     | expr . '^' expr
   66     | expr . '&' expr
   67     | expr . '|' expr

    AND    shift, and go to state 67
    OR     shift, and go to state 68
    EQUAL  shift, and go to state 69
    NE     shift, and go to state 70
    GE     shift, and go to state 71
    LE     shift, and go to state 72
    '<'    shift, and go to state 73
    '>'    shift, and go to state 74
    '+'    shift, and go to state 75
    '-'    shift, and go to state 76
    '*'    shift, and go to state 77
    '/'    shift, and go to state 78
    '%'    shift, and go to state 79
    '&'    shift, and go to state 80
    '|'    shift, and go to state 81
    '^'    shift, and go to state 82
    '{'    shift, and go to state 20

    stmtBlock  转到状态 85


State 55

   33 forStmt: FOR ';' . expr ';' expr stmtBlock
   34        | FOR ';' . expr ';' stmtBlock
   35        | FOR ';' . ';' expr stmtBlock
   36        | FOR ';' . ';' stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 86
    '('           shift, and go to state 41

    expr  转到状态 87
    call  转到状态 52


State 56

   29 forStmt: FOR expr . ';' expr ';' expr stmtBlock
   30        | FOR expr . ';' expr ';' stmtBlock
   31        | FOR expr . ';' ';' expr stmtBlock
   32        | FOR expr . ';' ';' stmtBlock
   49 expr: expr . '+' expr
   50     | expr . '-' expr
   51     | expr . '*' expr
   52     | expr . '/' expr
   53     | expr . '%' expr
   55     | expr . '<' expr
   56     | expr . LE expr
   57     | expr . EQUAL expr
   58     | expr . NE expr
   59     | expr . GE expr
   60     | expr . '>' expr
   61     | expr . AND expr
   62     | expr . OR expr
   63     | expr . '^' expr
   66     | expr . '&' expr
   67     | expr . '|' expr

    AND    shift, and go to state 67
    OR     shift, and go to state 68
    EQUAL  shift, and go to state 69
    NE     shift, and go to state 70
    GE     shift, and go to state 71
    LE     shift, and go to state 72
    '<'    shift, and go to state 73
    '>'    shift, and go to state 74
    '+'    shift, and go to state 75
    '-'    shift, and go to state 76
    '*'    shift, and go to state 77
    '/'    shift, and go to state 78
    '%'    shift, and go to state 79
    '&'    shift, and go to state 80
    '|'    shift, and go to state 81
    '^'    shift, and go to state 82
    ';'    shift, and go to state 88


State 57

   40 breakStmt: BREAK ';' .

    $default  reduce using rule 40 (breakStmt)


State 58

   39 continueStmt: CONTINUE ';' .

    $default  reduce using rule 39 (continueStmt)


State 59

   38 returnStmt: RETURN ';' .

    $default  reduce using rule 38 (returnStmt)


State 60
